# lesion-gnn

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  ddr.py  install.sh  pyproject.toml  segmentation_features.py  slurm-rsync-exclude.txt  vit.py
.devcontainer/: Dockerfile  devcontainer.json
baselines/: pyproject.toml
baselines/src/baselines/: __init__.py  __main__.py  timm.py  timm_model.py
cabnet/: README.md  pyproject.toml  train.py
cabnet/src/cabnet/: __init__.py  cabnet.py
configs/: aptos.yaml  aptos_sift.py  baseline_config.yaml  config.py  config_sweep.yaml  ddr_aptos_lesions.py  ddr_aptos_lesions.yaml  ddr_aptos_lesions_pointnet.py  ddr_aptos_lesions_set_transformer.py  ddr_aptos_sift.py  ddr_aptos_sift.yaml  schema.json
data/: .gitignore
fundus-datamodules/: pyproject.toml
fundus-datamodules/src/fundus_datamodules/: base.py  ddr.py  maples.py
fundus-datamodules/src/fundus_datamodules/aptos/: __init__.py  aptos.py  test.txt  train.txt  valid.txt
fundus-datamodules/src/fundus_datamodules/utils/: autocrop.py
lesion-aware-transformer/: eval.py  pyproject.toml  train.py
lesion-aware-transformer/src/lesion_aware_transformer/: __init__.py  lat.py
masked-vit/: pyproject.toml  run.py  train.py
masked-vit/src/masked_vit/: __init__.py  masked_vit.py
notebooks/: convert_ddr.ipynb  test.ipynb  test_cc.ipynb  test_extracted_components.ipynb  vit.ipynb  viz.ipynb
src/baseline/: datasets.py  model.py  train.py
src/drgnet/: base_model.py  callbacks.py  metrics.py  model.py  placeholder.py  training.py  transforms.py  utils.py
src/drgnet/datasets/: __init__.py  aptos.py  base.py  datamodule.py  ddr.py
src/drgnet/datasets/nodes/: lesions.py  sift.py
src/drgnet/fundus_datamodules/: __init__.py  base.py
src/drgnet/fundus_datamodules/aptos/: aptos.py
src/drgnet/fundus_datamodules/utils/: __init__.py
src/drgnet/models/: __init__.py  base.py  drgnet.py  gat.py  pointnet.py  set_transformer.py
src/drgnet/scripts/: train.py  train_sweep.py
src/drgnet/utils/: config.py
src/lesion_gnn/: callbacks.py  training.py
src/lesion_gnn/datasets/: base.py  datamodule.py  ddr.py
src/lesion_gnn/datasets/nodes/: lesions.py  sift.py
src/lesion_gnn/models/: __init__.py  base.py  drgnet.py  gat.py  gin.py  pointnet.py  set_transformer.py
src/lesion_gnn/scripts/: sweep.py  train.py
src/lesion_gnn/utils/: __init__.py  config.py  placeholder.py
src/masked_vit/: masked_vit.py
test/: test_transforms.py
