[project]
name = "lesion_gnn"
version = "0.1.0"
description = "DRG-NET: A graph neural network for computer-aided grading of diabetic retinopathy"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "pandas",
    "scikit-learn",
    "torch",
    "torch-geometric",
    "lightning",
    "torchmetrics",
    "tensorboard",
    "fundus_lesions_toolkit @ git+https://github.com/ClementPla/fundus-lesions-toolkit@main",
    "wandb",
    "albumentations",
    "lightning-bolts",
    "optuna",
]
readme = "README.md"
requires-python = ">=3.10" # Needed for type hinting with generics and "|" operator

[project.scripts]
train = "lesion_gnn.scripts.train:main"
sweep = "lesion_gnn.scripts.sweep:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "torch-tb-profiler",
]
notebook = ["ipykernel", "matplotlib", "ipywidgets"]
all = ["lesion_gnn[dev, notebook]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "TCH"]
fixable = ["I", "RUF100", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["lesion_gnn", "fundus_datamodules", "masked_vit"]
known-third-party = ["wandb"]

[tool.ruff.format]
docstring-code-format = true
