[project]
name = "lesion-gnn"
version = "0.1.0"
description = "DRG-NET: A graph neural network for computer-aided grading of diabetic retinopathy"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python-headless>=4.9.0.80",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.1.post1",
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "torch_scatter",
    "torch_sparse",
    "torch_cluster",
    "torch_spline_conv",
    "lightning>=2.2.0.post0",
    "torchmetrics>=1.3.1",
    "fundus_lesions_toolkit @ git+https://github.com/ClementPla/fundus-lesions-toolkit@main",
    "wandb>=0.16.3",
    "albumentations>=1.4.0",
    "lightning-bolts>=0.7.0",
    "optuna>=3.5.0",
]
readme = "README.md"
requires-python = ">=3.10" # Needed for type hinting with generics and "|" operator

[project.scripts]
train = "lesion_gnn.scripts.train:main"
sweep = "lesion_gnn.scripts.sweep:main"

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.3", "matplotlib>=3.8.3", "ipywidgets>=8.1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.0.2", "pytest-cov>=4.1.0", "pre-commit>=3.6.2"]

[tool.rye.workspace]
members = [".", "fundus-datamodules", "masked-vit", "baselines"]

[[tool.rye.sources]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.2.0+cu121.html"
type = "find-links"
# FIXME: rye has an issue and can't seem to handle pyg-lib

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "TCH"]
fixable = ["I", "RUF100", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["lesion_gnn", "fundus_datamodules", "masked_vit"]
known-third-party = ["wandb"]

[tool.ruff.format]
docstring-code-format = true
