[project]
name = "lesion-gnn"
version = "0.1.0"
description = "Ophtalmology with GNNs"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python-headless>=4.9.0.80",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.1.post1",
    "torch==2.2.1",
    "torch-geometric>=2.5.0",
    "torch-scatter==2.1.2+pt22cu121",
    "torch-sparse==0.6.18+pt22cu121",
    "torch-cluster==1.6.3+pt22cu121",
    "torch-sparse==0.6.18+pt22cu121",
    "lightning>=2.2.0.post0",
    "torchmetrics>=1.3.1",
    "fundus-lesions-toolkit",
    "fundus-datamodules",
    "wandb>=0.16.3",
    "albumentations>=1.4.0",
    "lightning-bolts>=0.7.0",
    "optuna>=3.5.0",
]
readme = "README.md"
requires-python = ">=3.10" # Needed for type hinting with generics and "|" operator

[project.scripts]
train = "lesion_gnn.scripts.train:main"
sweep = "lesion_gnn.scripts.sweep:main"

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.3", "matplotlib>=3.8.3", "ipywidgets>=8.1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.0.2", "pytest-cov>=4.1.0", "pre-commit>=3.6.2"]

[tool.rye.workspace]
members = [
    ".",
    "fundus-datamodules",
    "masked-vit",
    "baselines",
    "lesion-aware-transformer",
    "cabnet",
    "fundus-lesions-toolkit",
    "fundus-data-toolkit",
]

[[tool.rye.sources]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.2.1+cu121.html"
type = "find-links"
# FIXME: rye has an issue and can't seem to handle pyg-lib

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "TCH"]
fixable = ["I", "RUF100", "TCH"]

[tool.ruff.lint.isort]
known-first-party = [
    "lesion_gnn",
    "fundus_datamodules",
    "masked_vit",
    "lesion_aware_transformer",
    "cabnet",
]
known-third-party = ["wandb"]

[tool.ruff.format]
docstring-code-format = true
