[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baselines"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
  { name = "Zacharie Legault", email = "32556865+zacharielegault@users.noreply.github.com" },
]
dependencies = [
  "torch>=2.2.0",
  "lightning>=2.2.0.post0",
  "timm>=0.9.16",
  "lightning-bolts>=0.7.0",
  "fundus-datamodules",
  "lesion-gnn",
]

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
