[project]
name = "cabnet"
version = "0.1.0"
description = "CABNet: Category Attention Block for Imbalanced Diabetic Retinopathy Grading"
authors = [
    { name = "Zacharie Legault", email = "32556865+zacharielegault@users.noreply.github.com" },
]
dependencies = [
    "torch==2.2.1",
    "lightning>=2.2.1",
    "torchmetrics>=1.3.1",
    "wandb>=0.16.3",
    "timm>=0.9.16",
    "fundus-datamodules",
    "torch-geometric>=2.5.0",
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cabnet"]
