[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fundus-datamodules"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
  { name = "Zacharie Legault", email = "32556865+zacharielegault@users.noreply.github.com" },
]
dependencies = [
  "torch",
  "albumentations",
  "opencv-python-headless",
  "pandas",
  "numpy",
  "lightning",
  "timm",
]
