[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fundus-datamodules"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
  { name = "Zacharie Legault", email = "32556865+zacharielegault@users.noreply.github.com" },
]
dependencies = [
  "torch>=2.2.0",
  "albumentations>=1.4.0",
  "opencv-python-headless>=4.9.0.80",
  "pandas>=2.2.1",
  "numpy>=1.26.4",
  "lightning>=2.2.0.post0",
  "timm>=0.9.16",
]

[tool.rye]
managed = true
