[project]
name = "lesion-aware-transformer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zacharie Legault", email = "32556865+zacharielegault@users.noreply.github.com" },
]
dependencies = [
    "torch==2.2.1",
    "torch-scatter==2.1.2+pt22cu121",
    "lightning>=2.2.1",
    "torchmetrics>=1.3.1",
    "wandb>=0.16.3",
    "timm>=0.9.16",
    "einops>=0.7.0",
    "fundus-datamodules",
    "torch-geometric>=2.5.0",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.3", "matplotlib>=3.8.3", "ipywidgets>=8.1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.2.1+cu121.html"
type = "find-links"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lesion_aware_transformer"]
