[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "masked-vit"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    { name = "Zacharie Legault", email = "32556865+zacharielegault@users.noreply.github.com" },
]
dependencies = [
    "torch>=2.2.0",
    "timm>=0.9.16",
    "fundus_lesions_toolkit @ git+https://github.com/ClementPla/fundus-lesions-toolkit@main",
    "lightning>=2.2.0.post0",
    "fundus-datamodules",
    "matplotlib",
]

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
